// Vitest Snapshot v1

exports[`Empty Header > renders 1`] = `
<nav
  class="App-header navbar navbar-expand navbar-light"
>
  <span
    class="brand-box navbar-brand"
  >
    <a
      href="https://www2.gov.bc.ca/gov/content/home"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Government of BC logo"
        class="bc-gov-icon"
        height="43"
        src="/src/assets/images/logo-banner.svg"
        width="156"
      />
    </a>
    <span
      class="sc-bdvvtL dcDPxN"
    />
    <img
      alt="PIMS logo"
      class="pims-logo"
      height="50"
      src="/src/assets/images/PIMSlogo/logo_only.png"
    />
  </span>
  <div
    class="title mr-auto navbar-nav"
  >
    <div
      class="nav-item"
    >
      <h1
        class="longAppName"
      >
        Property Inventory Management System
      </h1>
      <h1
        class="shortAppName"
      >
        PIMS
      </h1>
    </div>
  </div>
</nav>
`;

exports[`Empty Header renders 1`] = `
.c0 {
  border-left: 2px solid white;
  font-size: 34px;
  margin: 0 15px 0 25px;
  vertical-align: top;
}

<nav
  class="App-header navbar navbar-expand navbar-light"
>
  <span
    class="brand-box navbar-brand"
  >
    <a
      href="https://www2.gov.bc.ca/gov/content/home"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Government of BC logo"
        class="bc-gov-icon"
        height="43"
        src="logo-banner.svg"
        width="156"
      />
    </a>
    <span
      class="c0"
    />
    <img
      alt="PIMS logo"
      class="pims-logo"
      height="50"
      src="logo_only.png"
    />
  </span>
  <div
    class="title mr-auto navbar-nav"
  >
    <div
      class="nav-item"
    >
      <h1
        class="longAppName"
      >
        Property Inventory Management System
      </h1>
      <h1
        class="shortAppName"
      >
        PIMS
      </h1>
    </div>
  </div>
</nav>
`;
